--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -16,6 +16,6 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/framelayout_song_container"
+    android:id="@+id/fl_song_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
