--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -53,10 +53,7 @@
             android:clickable="true"
             android:contentDescription="@string/song_home_content_description"
             android:focusable="true"
-            android:paddingStart="@dimen/padding_normal"
-            android:paddingTop="@dimen/padding_normal"
-            android:paddingEnd="@dimen/padding_normal"
-            android:paddingBottom="@dimen/padding_normal"
+            android:padding="@dimen/padding_normal"
             android:src="@drawable/song_ic_arrow_back_24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -69,10 +66,7 @@
             android:clickable="true"
             android:contentDescription="@string/song_share_content_description"
             android:focusable="true"
-            android:paddingStart="@dimen/padding_normal"
-            android:paddingTop="@dimen/padding_normal"
-            android:paddingEnd="@dimen/padding_normal"
-            android:paddingBottom="@dimen/padding_normal"
+            android:padding="@dimen/padding_normal"
             android:src="@drawable/song_ic_share_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +76,7 @@
         android:id="@+id/cl_song_title_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_primary_variant"
+        android:background="@color/color_primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_song_cover">
@@ -94,17 +88,13 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:paddingStart="@dimen/padding_normal"
-            android:paddingLeft="@dimen/padding_normal"
             android:paddingTop="@dimen/padding_small"
             android:paddingEnd="@dimen/padding_normal"
-            android:paddingRight="@dimen/padding_normal"
             android:textAppearance="?textAppearanceHeadline5"
             android:textColor="@color/color_on_primary"
-            app:layout_constraintBottom_toTopOf="@id/tv_song_artist"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
             tools:text="@tools:sample/full_names" />
 
         <TextView
@@ -112,9 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/padding_normal"
-            android:paddingLeft="@dimen/padding_normal"
             android:paddingEnd="@dimen/padding_normal"
-            android:paddingRight="@dimen/padding_normal"
             android:paddingBottom="@dimen/padding_small"
             android:textAppearance="?textAppearanceSubtitle1"
             android:textColor="@color/color_on_primary"
@@ -143,9 +131,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:lineSpacingMultiplier="1.15"
             android:padding="@dimen/padding_normal"
-            android:textAppearance="?textAppearanceBody2"
+            android:textAppearance="@style/TextAppearance.Lyricly.Lyrics"
             android:textColor="@color/color_on_background"
             tools:text="@tools:sample/lorem/random" />
     </androidx.core.widget.NestedScrollView>
