--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,7 +141,7 @@
     </style>
 
     <style name="TextAppearance.Lyricly.Body2" parent="TextAppearance.MaterialComponents.Body2">
-        <item name="fontFamily">@font/noto_serif</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="TextAppearance.Lyricly.Button" parent="TextAppearance.MaterialComponents.Button">
@@ -154,6 +154,11 @@
 
     <style name="TextAppearance.Lyricly.Overline" parent="TextAppearance.MaterialComponents.Overline">
         <item name="fontFamily">@font/montserrat_regular</item>
+    </style>
+
+    <style name="TextAppearance.Lyricly.Lyrics" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="fontFamily">@font/noto_serif</item>
+        <item name="android:lineSpacingMultiplier">1.15</item>
     </style>
 
     <!--SHAPE-->
