--- a/app/src/main/res/drawable/song_gradient_cover.xml
+++ b/app/src/main/res/drawable/song_gradient_cover.xml
@@ -15,9 +15,10 @@
   ~ limitations under the License.
   -->
 
-<network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">api.napster.com</domain>
-        <domain includeSubdomains="true">direct.napster.com</domain>
-    </domain-config>
-</network-security-config>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="-90"
+        android:endColor="@color/transparent"
+        android:startColor="@color/white50"
+        android:type="linear" />
+</shape>
