--- a/app/src/main/res/values-v27/colors.xml
+++ b/app/src/main/res/values-v27/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright 2018 Felipe Joglar Santos
+  ~ Copyright 2019 Felipe Joglar Santos
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~    http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,12 +15,8 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/share"
-        android:title="@string/song_menu_share"
-        android:icon="@drawable/song_ic_share_24dp"
-        android:orderInCategory="1"
-        app:showAsAction="always" />
-</menu>
+<resources>
+    <!--LIGHT COLOR THEME-->
+    <!--Components-->
+    <color name="navigation_bar">@color/white</color>
+</resources>
