--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,6 +102,10 @@
         <item name="itemTextAppearanceActive">@style/TextAppearance.Lyricly.Subtitle2</item>
         <item name="android:theme">@style/ThemeOverlay.MaterialComponents.Light</item>
     </style>
+    
+    <style name="Widget.Lyricly.FloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="shapeAppearanceOverlay">?shapeAppearanceSmallComponent</item>
+    </style>
 
     <!--TYPOGRAPHY-->
     <style name="TextAppearance.Lyricly.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
@@ -165,6 +169,8 @@
     <!--Shape Appearance for small components like chips, buttons, text fields and FABs-->
     <style name="ShapeAppearance.Lyricly.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <!--Your custom shape here-->
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">20%</item>
     </style>
 
     <!--Shape Appearance for medium components like cards, alert dialogs-->
